--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -159,6 +159,7 @@ html {
 
 html,
 body {
+    background: #f5f5f5;
     font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
 }
 
