--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -311,35 +311,56 @@ input {
     display: none!important;
 }
 
+
 /* 滚动条
 -------------------------------------------------- */
+
+
 /*滚动条宽度*/
+
 ::-webkit-scrollbar {
     width: 5px;
 }
 
-/* 轨道样式 */
-::-webkit-scrollbar-track {
 
-}
+/* 轨道样式 */
+
+::-webkit-scrollbar-track {}
+
 
 /* Handle样式 */
+
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.2);
 }
 
+
 /*当前窗口未激活的情况下*/
+
 ::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(0, 0, 0, 0.1);
 }
 
+
 /*hover到滚动条上*/
+
 ::-webkit-scrollbar-thumb:vertical:hover {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
+
 /*滚动条按下*/
+
 ::-webkit-scrollbar-thumb:vertical:active {
     background-color: rgba(0, 0, 0, 0.7);
+}
+
+.loading-mask {
+    height: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
