--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,7 +2,7 @@
 * @Author: Hong
 * @Date:   2018-12-05 20:03:45
 * @Last Modified by:   Hong
-* @Last Modified time: 2018-12-06 13:43:11
+* @Last Modified time: 2019-04-18 09:36:43
 */
 /* .router a{
     display: block;
@@ -43,4 +43,7 @@
     padding-left: 8px;
     margin-right: auto;
     margin-left: auto;
+}
+.iconfont{
+    font-size: 26px;
 }
